--- a/Website/index.html
+++ b/Website/index.html
@@ -58,8 +58,7 @@
               <li><i class="ri-check-double-line"></i> Von Schülern für Schüler</li>
               <li><i class="ri-check-double-line"></i> Lokales Hosting möglich</li>
             </ul>
-      <a href="register.html" class="btn btn-primary btn-lg">Jetzt als Schüler Registrieren</a>
-      <a href="lehrerreg.html" class="btn btn-primary btn-lg">Jetzt als Lehrer Registrieren</a>
+      <a href="register.html" class="btn btn-primary btn-lg">Jetzt Registrieren</a>
         <img class="webimage" src="img/web.png" alt="">
       
      
@@ -164,7 +163,7 @@
           <div class="container" style="background-color:#f1f1f1">
             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="btn cancelbtn">Cancel</button>
             <span class="psw">Password vergessen?<a href="#"> Zurücksetzten!</a></span>
-            <spam class="signup">Noch keinen Account?<a href="register.html"> Registriere dich hier!</a></spam>
+            <span class="signup">Noch keinen Account?<a href="register.html"> Registriere dich hier!</a></span>
           </div>
         </form>
         <script>
