--- a/Website/index.html
+++ b/Website/index.html
@@ -163,7 +163,7 @@
           <div class="container" style="background-color:#f1f1f1">
             <button type="button" onclick="document.getElementById('id01').style.display='none'" class="btn cancelbtn">Cancel</button>
             <span class="psw">Password vergessen?<a href="#"> Zurücksetzten!</a></span>
-            <span class="signup">Noch keinen Account?<a href="register.html"> Registriere dich hier!</a></span>
+            <span class="signup">Noch keinen Account?<a href="register.php"> Registriere dich hier!</a></span>
           </div>
         </form>
         <script>
